--- a/Shop/lc-page/app/scss/all.scss
+++ b/Shop/lc-page/app/scss/all.scss
@@ -2684,8 +2684,7 @@ i {
             width: 30px;
             height: 30px;
             border-radius: 3px;
-            border: 1px solid rgba(0, 0, 0, 0.2);
-            background-color: #fff;
+            border: 1px solid #e5e5e5;
             text-align: center;
             line-height: 28px;
             display: none;
