--- a/Shop/lc-page/app/css/all.css
+++ b/Shop/lc-page/app/css/all.css
@@ -2539,8 +2539,7 @@ i {
   height: 30px;
   -webkit-border-radius: 3px;
           border-radius: 3px;
-  border: 1px solid rgba(0, 0, 0, 0.2);
-  background-color: #fff;
+  border: 1px solid #e5e5e5;
   text-align: center;
   line-height: 28px;
   display: none;
