--- a/Shop/lc-page/app/scss/lc_all.scss
+++ b/Shop/lc-page/app/scss/lc_all.scss
@@ -1,36 +1,3 @@
-.in-progress {
-    border: 1px solid #e5e5e5 !important;
-    box-sizing: padding-box;
-    position: relative;
-    overflow: hidden;
-}
-.in-progress:before {
-    content: "";
-    display: block;
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    top: 0;
-    left: 0;
-    opacity: 0.7;
-  color: #818181;
-  background: linear-gradient(-45deg, rgba(220, 220, 220, 0.5) 25%, transparent 25%, transparent 50%, rgba(220, 220, 220, 0.5) 50%, rgba(220, 220, 220, 0.5) 75%, transparent 75%, transparent);
- 
-  background-repeat: repeat;
-  background-size: 40px 40px, 100% 100%;
-  animation: progress-bar-stripes 2s linear infinite;
-}
-
-@keyframes progress-bar-stripes {
-  from { background-position: 0 0; }
-  to { background-position: 40px 0; }
-}
-
-
-
-
-
-
 .slick-dots {
     padding: 0;
     margin: 30px 0 0;
@@ -47,15 +14,21 @@
 
 .checkbox label {
     position: relative;
-    display: inline-block;
+    display: flex;
+    align-items: center;
     padding-left: 25px;
     cursor: pointer;
     color: #525252;
-
     .quantity_container {
         padding-left: 3px;
         color: #cacaca;
         letter-spacing: 0.05em;
+    }
+    .txt_content {
+        padding-right: 5px;
+    }
+    span {
+        line-height: 125%;
     }
 }
 
@@ -73,6 +46,7 @@
     border: 1px solid #cdcdcd;
     border-radius: 2px;
     left: 0px;
+    top: 50%;
     top: 1px;
 }
 
@@ -945,6 +919,9 @@
             .item_container {
                 opacity: 0.4;
             }
+            span {
+                font-weight: normal !important;
+            }
         }
 
         .order_item {
@@ -1101,8 +1078,13 @@
             }
         }
 
+        .total-price_col span {
+            font-weight: bold;
+        }
+
         .more_btn {
             border-bottom: 1px dotted #585858;
+            display: inline;
             transition: .3s;
         }
     }
@@ -1162,14 +1144,20 @@
     }
 
     .link_block .button_favourites:hover,
-    .order-page_container .order_nav_heading button:hover,
-    .order-page_container .orders_nav_buttons a:hover {
+    .order-page_container .order_nav_heading button:hover {
         border-color: #999999;
         color: #1d1d1d;
 
-        i, &:before, &:after {
+        i {
             color: #626262;
         }
+    }
+    .order-page_container .orders_nav_buttons a:hover {
+        &:before, &:after {
+            color: #626262;
+        }
+        border-color: #999999;
+        color: #1d1d1d;
     }
 
     .password_resend_btn:hover,
@@ -1224,7 +1212,6 @@
     .checkbox label {
         min-height: 30px;
         padding-left: 38px;
-        padding-top: 7px;
     }
 
     .checkbox label::after {
@@ -1424,9 +1411,6 @@
      .order-page_container .photo_col {
         width: 30%;
      }
-     .checkbox label {
-        padding-bottom: 7px;
-     }
      .order-page_container .order-items_container .photo_col .section_content img {
         padding: 5px;
      }
@@ -1492,20 +1476,31 @@
     }
     .order-page_container .order_content {
         border: none;
+        background-color: #fafafa;
     }
     .order-page_container .contact_info_block {
         border: 1px solid #e5e5e5;
         border-top: none;
+        padding: 10px 20px;
+        background-color: #fff;
     }
     .order-page_container .order_nav_heading {
         border: 1px solid #e5e5e5;
     }
+    .order-page_container .order-items_container .order_item,
+    .order-page_container .final_price_bottom {
+        background: #fff;
+    }
     .order-page_container .order_container {
-        padding: 10px 0 0 0;
+        padding: 20px 0 0 0;
+    }
+    .order-page_container .order_container .title {
+        padding-bottom: 10px;
     }
     .order-page_container .final_price_bottom {
         flex-direction: column;
-        padding: 15px;
+        padding: 15px 20px;
+        height: auto;
     }
     .order-page_container .final_price_bottom .discount,
     .order-page_container .final_price_bottom .final_price {
@@ -1522,11 +1517,8 @@
         width: 100%;
     }
     .order-page_container .top_title {
-        position: absolute;
-        left: 60px;
-    }
-    .order-page_container .set_container {
-        padding-top: 65px;
+        padding-left: 60px;
+        min-height: 55px;
     }
     .order-page_container .photo_col {
         position: absolute;
@@ -1552,9 +1544,6 @@
      .order-page_container .order_nav_heading {
         padding: 15px 20px;
         border-bottom: 1px solid #e5e5e5;
-     }
-     .order-page_container .contact_info_block {
-        padding: 10px 20px;
      }
     .paginator .paginator_link_page:nth-child(2),
     .paginator .paginator_link_page:nth-child(8) {
