--- a/Shop/lc-page/app/css/lc_all.css
+++ b/Shop/lc-page/app/css/lc_all.css
@@ -59,16 +59,13 @@
   left: 4px;
   top: 2px; }
 
-.checkbox input[type="checkbox"] + label::after,
-.checkbox input[type="radio"] + label::after {
+.checkbox input[type="checkbox"] + label::after {
   content: none; }
 
-.checkbox input[type="checkbox"]:checked + label::after,
-.checkbox input[type="radio"]:checked + label::after {
+.checkbox input[type="checkbox"]:checked + label::after {
   content: ""; }
 
-.checkbox input[type="checkbox"]:checked + label::before,
-.checkbox input[type="radio"]:checked + label::before {
+.checkbox input[type="checkbox"]:checked + label::before {
   background-color: #cfeaff; }
 
 .current_choise {
@@ -1101,6 +1098,204 @@
   width: 100%;
   border: none; }
 
+.profile-page_heading {
+  border: 1px solid #e5e5e5;
+  background: #fff;
+  padding: 10px 20px; }
+
+#modal-form .modal_heading {
+  background-color: #fafafa;
+  padding: 18px 30px;
+  border-bottom: none; }
+
+#modal-form .modal_note {
+  background-color: #fff;
+  padding: 10px 30px;
+  border-bottom: 1px solid #e5e5e5; }
+
+#modal-form .modal_title {
+  font-weight: bold;
+  color: #1e0602;
+  font-size: 20px; }
+
+#modal-form .nano {
+  max-height: -webkit-calc(100vh - 250px);
+  max-height: calc(100vh - 250px); }
+
+.profile_form {
+  width: 100%;
+  max-width: 500px; }
+  .profile_form .checkbox {
+    display: inline-block;
+    margin: 10px 0 20px 0;
+    margin-left: 132px; }
+  .profile_form label {
+    color: #1e0602; }
+  .profile_form .form-group {
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: end;
+    -webkit-align-items: flex-end;
+        -ms-flex-align: end;
+            align-items: flex-end;
+    margin-bottom: 10px; }
+    .profile_form .form-group:first-child {
+      margin-bottom: 20px; }
+    .profile_form .form-group label {
+      display: inline-block;
+      padding-right: 12px;
+      padding-bottom: 9px;
+      width: 132px;
+      text-align: right;
+      -webkit-flex-shrink: 0;
+          -ms-flex-negative: 0;
+              flex-shrink: 0; }
+  .profile_form #fio,
+  .profile_form #tel,
+  .profile_form #email {
+    -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
+            box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
+    background-color: #fff;
+    border: 1px solid #ccc;
+    color: #1e0602;
+    height: 34px;
+    padding: 8px 12px;
+    -webkit-border-radius: 4px;
+            border-radius: 4px;
+    width: 100%; }
+  .profile_form .organization_group {
+    margin-bottom: 20px;
+    margin-left: 132px;
+    display: none; }
+    .profile_form .organization_group span {
+      display: block;
+      color: #1e0602;
+      padding-bottom: 7px;
+      display: none; }
+    .profile_form .organization_group a {
+      -webkit-border-radius: 4px;
+              border-radius: 4px;
+      border: 1px solid #e5e5e5;
+      color: #818181;
+      border-radius: 4px;
+      -webkit-transition: .3s;
+      -o-transition: .3s;
+      transition: .3s;
+      padding: 8px 23px;
+      display: inline-block; }
+
+#save {
+  background-color: #ffcc33;
+  border: none;
+  padding: 12px 25px;
+  -webkit-border-radius: 4px;
+          border-radius: 4px;
+  cursor: pointer;
+  -webkit-transition: .3s;
+  -o-transition: .3s;
+  transition: .3s;
+  margin-left: 132px; }
+
+.org_form .form_section {
+  padding: 40px;
+  border-bottom: 1px solid #e5e5e5; }
+  .org_form .form_section:last-child {
+    border: none; }
+
+.org_form input[type="text"],
+.org_form input[type="email"] {
+  -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
+          box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
+  background-color: #fff;
+  border: 1px solid #ccc;
+  color: #1e0602;
+  height: 34px;
+  padding: 8px 12px;
+  -webkit-border-radius: 4px;
+          border-radius: 4px;
+  width: 100%; }
+
+.org_form .form-group .input_section {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: end;
+  -webkit-align-items: flex-end;
+      -ms-flex-align: end;
+          align-items: flex-end;
+  margin-top: 10px; }
+
+.org_form .form-group:first-child .input_section {
+  margin: 0; }
+
+.org_form .form-group:last-child .checkbox label {
+  margin-bottom: 0; }
+
+.org_form .form-group label {
+  width: 200px;
+  -webkit-flex-shrink: 0;
+      -ms-flex-negative: 0;
+          flex-shrink: 0;
+  text-align: right;
+  padding-right: 12px;
+  color: #1e0602;
+  padding-bottom: 9px; }
+
+.org_form .form-group .checkbox {
+  display: inline-block; }
+  .org_form .form-group .checkbox label {
+    width: auto;
+    margin: 10px 0 10px 200px;
+    padding-bottom: 0; }
+
+.submit_group {
+  background-color: #fafafa;
+  padding: 15px 0;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+      -ms-flex-pack: center;
+          justify-content: center; }
+  .submit_group #reset {
+    padding: 11px 25px;
+    width: 120px;
+    margin-left: 10px;
+    -webkit-border-radius: 4px;
+            border-radius: 4px;
+    cursor: pointer;
+    -webkit-transition: .3s;
+    -o-transition: .3s;
+    transition: .3s;
+    border: 1px solid #e5e5e5;
+    color: #818181;
+    background-color: transparent; }
+  .submit_group #save {
+    margin-left: 0; }
+
+.profile-page_content {
+  border: 1px solid #e5e5e5;
+  border-top: none;
+  background: #fff;
+  padding: 60px 100px;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+      -ms-flex-align: center;
+          align-items: center; }
+
 @media screen and (min-width: 1025px) {
   .orders-page_container ul.filter_nav a:hover {
     background-color: #fafafa; }
@@ -1111,11 +1306,15 @@
     color: #1d1d1d;
     border-color: #999999; }
   .link_block .button_favourites:hover,
-  .order-page_container .order_nav_heading button:hover {
+  .order-page_container .order_nav_heading button:hover,
+  .profile_form .organization_group a:hover,
+  #reset:hover {
     border-color: #999999;
     color: #1d1d1d; }
     .link_block .button_favourites:hover i,
-    .order-page_container .order_nav_heading button:hover i {
+    .order-page_container .order_nav_heading button:hover i,
+    .profile_form .organization_group a:hover i,
+    #reset:hover i {
       color: #626262; }
   .order-page_container .orders_nav_buttons a:hover {
     border-color: #999999;
@@ -1126,6 +1325,7 @@
   .lc_content_auth .auth_link:hover {
     background-color: #5d90a6; }
   .active_s:hover,
+  #save:hover,
   .pay:hover {
     background-color: #ffdd7d; }
   .dashboard .active a:hover {
@@ -1301,14 +1501,17 @@
   .order-page_container .order-items_container .tile_col .tile_name {
     padding: 10px 0 0 10px;
     width: 70%; }
-  .order-page_container .order-items_container .tile_col .total-price_col, .order-page_container .order-items_container .tile_col .quantity_col, .order-page_container .order-items_container .tile_col .price_col {
+  .order-page_container .order-items_container .tile_col .total-price_col,
+  .order-page_container .order-items_container .tile_col .quantity_col,
+  .order-page_container .order-items_container .tile_col .price_col {
     padding-top: 15px;
     padding-bottom: 5px; }
   .order-page_container .order-items_container .tile_col .total-price_col {
     padding-right: 0; }
   .order-page_container .order-items_container .order_item:first-child {
     border-top: 1px solid #e5e5e5; }
-  .order .personal {
+  .order .personal,
+  .profile .personal {
     display: none; }
   .order-page_container .order-items_container .item_container {
     -webkit-flex-wrap: wrap;
@@ -1318,10 +1521,12 @@
     width: 30%; }
   .order-page_container .order-items_container .photo_col .section_content img {
     padding: 5px; }
-  .order-page_container .order-items_container .name_col, .order-page_container .order-items_container .tile_col {
+  .order-page_container .order-items_container .name_col,
+  .order-page_container .order-items_container .tile_col {
     width: 70%;
     padding: 0; }
-  .order-page_container .price_col, .order-page_container .total-price_col,
+  .order-page_container .price_col,
+  .order-page_container .total-price_col,
   .order-page_container .quantity_col {
     width: 33.33%;
     -webkit-box-align: center;
@@ -1336,6 +1541,8 @@
 @media screen and (max-width: 676px) {
   .orders .personal {
     display: none; }
+  .profile-page_content {
+    padding: 60px; }
   .orders-page_container .order_count .link_block .button_more_info {
     font-size: 0;
     width: auto;
@@ -1354,6 +1561,48 @@
       color: #cccccc; } }
 
 @media screen and (max-width: 576px) {
+  .profile-page_content {
+    padding: 20px; }
+  .profile_form .form-group,
+  .org_form .form-group .input_section {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -webkit-flex-direction: column;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: start;
+    -webkit-align-items: flex-start;
+        -ms-flex-align: start;
+            align-items: flex-start; }
+  .profile_form .form-group label,
+  .org_form .form-group label {
+    text-align: left;
+    width: auto; }
+  .profile_form .form-group,
+  .profile_form .form-group:first-child {
+    margin-bottom: 15px; }
+  .org_form .form-group .input_section {
+    margin-top: 15px; }
+  .submit_group {
+    -webkit-box-shadow: 0px -3px 18px 0px #d4d4d2;
+            box-shadow: 0px -3px 18px 0px #d4d4d2;
+    position: relative;
+    z-index: 2; }
+  .org_form .form-group .checkbox label {
+    margin-left: 0; }
+  #modal-form .modal_note {
+    padding: 10px 20px; }
+  #modal-form .modal_heading {
+    padding: 20px; }
+  .org_form .form_section {
+    padding: 20px; }
+  .profile_form .organization_group,
+  .profile_form .checkbox {
+    margin-left: 0; }
+  .profile_form .form-group:last-child {
+    margin: 0; }
+    .profile_form .form-group:last-child #save {
+      margin: 0; }
   .order-page_container .contact_info_block tr {
     display: -webkit-box;
     display: -webkit-flex;
@@ -1415,7 +1664,8 @@
   .order-page_container .final_price_bottom .discount {
     margin-bottom: 8px;
     margin-top: 0; }
-  .order-page_container .order-items_container .name_col, .order-page_container .order-items_container .tile_col {
+  .order-page_container .order-items_container .name_col,
+  .order-page_container .order-items_container .tile_col {
     width: 100%; }
   .order-page_container .top_title {
     padding-left: 60px;
