--- a/Shop/lc-page/app/scss/lc_all.scss
+++ b/Shop/lc-page/app/scss/lc_all.scss
@@ -1328,7 +1328,7 @@
 
 
 
-//media
+//mediaa
 @media screen and (min-width: 1025px) {
     .orders-page_container ul.filter_nav a:hover {
         background-color: #fafafa;
