--- a/Shop/lc-page/app/scss/lc_all.scss
+++ b/Shop/lc-page/app/scss/lc_all.scss
@@ -1139,6 +1139,7 @@
 }
 
 #modal-form {
+    overflow: hidden;
     .modal_heading {
         background-color: #fafafa;
         padding: 18px 30px;
