--- a/portfolio/FLG/app/scss/all.scss
+++ b/portfolio/FLG/app/scss/all.scss
@@ -522,7 +522,7 @@ aside {
 		margin-top: 20px;
 	}
 }
-
+//
 @media screen and (max-width: 380px) {
     header .nav-container {
     	width: 200px;
