--- a/portfolio/Individual/app/css/common.css
+++ b/portfolio/Individual/app/css/common.css
@@ -56,6 +56,11 @@ body {
   height: 100%;
   min-width: 320px; }
 
+.body_fixed {
+  position: fixed;
+  width: 100%;
+  height: 100%; }
+
 *, *:before, *:after {
   -webkit-box-sizing: inherit;
           box-sizing: inherit; }
@@ -391,10 +396,6 @@ header {
 @media screen and (max-width: 1479px) {
   .container {
     max-width: 1140px; }
-  .place_block span.insta:before {
-    height: 15px !important;
-    width: 15px !important;
-    margin-right: 5px; }
   .desc {
     padding-top: 100px; }
   header {
