--- a/portfolio/Individual/app/css/common.css
+++ b/portfolio/Individual/app/css/common.css
@@ -54,10 +54,10 @@ html {
 
 body {
   height: 100%;
-  min-width: 320px; }
+  min-width: 320px;
+  min-height: 550px; }
 
 .body_fixed {
-  position: fixed;
   width: 100%;
   height: 100%; }
 
@@ -67,7 +67,7 @@ body {
 
 .nav-btn {
   display: none;
-  position: absolute;
+  position: fixed;
   right: 15px;
   top: 22px;
   z-index: 5; }
@@ -146,7 +146,7 @@ body {
   height: 100%; }
 
 header {
-  position: absolute;
+  position: fixed;
   width: 100%;
   z-index: 3;
   background-color: #000;
