--- a/portfolio/Individual/app/scss/common.scss
+++ b/portfolio/Individual/app/scss/common.scss
@@ -8,11 +8,11 @@ body {
 	height: 100%;
 	//overflow: hidden;
 	min-width: 320px;
+	min-height: 550px;
 }
 .body_fixed {
-	position: fixed;
 	width: 100%;
-	height: 100%
+	height: 100%;
 }
 *, *:before, *:after {
   box-sizing: inherit;
@@ -20,7 +20,7 @@ body {
 
 .nav-btn {
     display: none;
-    position: absolute;
+    position: fixed;
     right: 15px;
     top: 22px;
     z-index: 5;
@@ -99,7 +99,7 @@ body {
 }
 
 header {
-	position: absolute;
+	position: fixed;
 	width: 100%;
 	z-index: 3;
 	background-color: #000;
