--- a/portfolio/Individual/app/css/common.css
+++ b/portfolio/Individual/app/css/common.css
@@ -50,7 +50,8 @@ html {
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
   font-size: 10px;
-  height: 100%; }
+  height: 100%;
+  background-color: #000; }
 
 body {
   height: 100%;
@@ -298,7 +299,7 @@ header {
   -webkit-transition: .5s ease;
   -o-transition: .5s ease;
   transition: .5s ease;
-  position: absolute;
+  position: fixed;
   z-index: 4;
   height: 100%;
   width: 100%;
