--- a/portfolio/Individual/app/scss/common.scss
+++ b/portfolio/Individual/app/scss/common.scss
@@ -3,6 +3,7 @@ html {
 	box-sizing: border-box;
    font-size: 10px;
    height: 100%;
+   background-color: #000;
 }
 body {
 	height: 100%;
@@ -245,7 +246,7 @@ header {
 .nav_mobile {
 	transform: translateX(-100%);
 	transition: .5s ease;
-	position: absolute;
+	position: fixed;
 	z-index: 4;
 	height: 100%;
 	width: 100%;
