--- a/portfolio/Individual/app/scss/start.scss
+++ b/portfolio/Individual/app/scss/start.scss
@@ -41,6 +41,7 @@
 		font: 2.7em "BebasNeueBook";
 		letter-spacing: 2px;
 		text-align: center;
+		white-space: nowrap;
 		span {
 			font-family: "BebasNeueRegular";
 			.num {
