--- a/portfolio/Individual/app/css/common.css
+++ b/portfolio/Individual/app/css/common.css
@@ -69,12 +69,19 @@ body {
 .nav-btn {
   display: none;
   position: fixed;
-  right: 15px;
-  top: 22px;
+  right: 0;
+  top: 5px;
+  width: 60px;
+  height: 60px;
   z-index: 5; }
   .nav-btn a {
     display: block;
-    position: relative;
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    -webkit-transform: translate(-50%, -50%);
+        -ms-transform: translate(-50%, -50%);
+            transform: translate(-50%, -50%);
     height: 25px;
     width: 30px;
     -webkit-box-sizing: border-box;
@@ -147,7 +154,7 @@ body {
   height: 100%; }
 
 header {
-  position: fixed;
+  position: absolute;
   width: 100%;
   z-index: 3;
   background-color: #000;
