--- a/portfolio/Individual/app/css/common.css
+++ b/portfolio/Individual/app/css/common.css
@@ -60,7 +60,7 @@ body {
 
 .body_fixed {
   width: 100%;
-  height: 100%; }
+  position: fixed; }
 
 *, *:before, *:after {
   -webkit-box-sizing: inherit;
@@ -68,7 +68,7 @@ body {
 
 .nav-btn {
   display: none;
-  position: fixed;
+  position: absolute;
   right: 0;
   top: 5px;
   width: 60px;
@@ -121,19 +121,22 @@ body {
       -webkit-transition: .3s ease;
       -o-transition: .3s ease;
       transition: .3s ease; }
-  .nav-btn .a_active::before {
+
+.nav_btn_active {
+  position: fixed; }
+  .nav_btn_active a::before {
     -webkit-transform: rotate(45deg);
         -ms-transform: rotate(45deg);
             transform: rotate(45deg);
     top: 11px;
     width: 34px; }
-  .nav-btn .a_active::after {
+  .nav_btn_active a::after {
     -webkit-transform: rotate(-45deg);
         -ms-transform: rotate(-45deg);
             transform: rotate(-45deg);
     bottom: 11px;
     width: 34px; }
-  .nav-btn .a_active span {
+  .nav_btn_active a span {
     background-color: transparent !important; }
 
 .desc {
