--- a/portfolio/Individual/app/scss/common.scss
+++ b/portfolio/Individual/app/scss/common.scss
@@ -13,7 +13,7 @@ body {
 }
 .body_fixed {
 	width: 100%;
-	height: 100%;
+	position: fixed;
 }
 *, *:before, *:after {
   box-sizing: inherit;
@@ -21,7 +21,7 @@ body {
 
 .nav-btn {
     display: none;
-    position: fixed;
+    position: absolute;
     right: 0;
     top: 5px;
     width: 60px;
@@ -67,8 +67,11 @@ body {
             transition: .3s ease;
         }
     }
-    .a_active {
-        &::before {
+}
+.nav_btn_active {
+	position: fixed;
+        a {
+        	&::before {
             transform: rotate(45deg);
             top: 11px;
             width: 34px;
@@ -81,8 +84,8 @@ body {
         span {
             background-color: transparent !important;
         }
+        }
     }
-}
 
 .desc {
 	height: 100%;
