--- a/portfolio/Individual/app/scss/start.scss
+++ b/portfolio/Individual/app/scss/start.scss
@@ -1,3 +1,7 @@
+.start-page {
+	//display: none;
+}
+
 .start-page_container {
     height: 100%;
 }
@@ -18,10 +22,19 @@
 	white-space: nowrap;
 	padding-bottom: 10px;
 }
-.left-info_block {
+.info_block {
 	position: absolute;
 	top: 50%;
 	transform: translateY(-50%);
+	&:before {
+		content: '';
+		display: block;
+		height: 70px;
+		width: 50px;
+		background: url(../img/main-info-item.png) no-repeat;
+		background-size: contain;
+		margin: 0 auto;
+	}
 }
 .place_block {
 	display: flex;
@@ -129,7 +142,7 @@
 	.slogan {
 		display: none;
 	}
-	.left-info_block {
+	.info_block {
 		left: 50%;
 		transform: translate(-50%, -50%);
 	}
